INT-83: fix dashlet btn-toolbar letter spacing

--- a/sugarcrm/styleguide/less/clients/base/components/dnb-dashlets.less
+++ b/sugarcrm/styleguide/less/clients/base/components/dnb-dashlets.less
@@ -70,6 +70,11 @@ aside.create-no-data {
 	height: 50px;
 }
 
+.btn-toolbar .dashlet-toolbar .label {
+	letter-spacing: normal;
+	font-size: 12px;
+	font-weight: normal;
+}
 
 .dnb-refresh {
 	margin-right: 15px;
